[package]
name = "sw3d"
version = "0.1.0"
authors = ["Jarod <jarod8405@gmail.com>"]


[lib]
name = "sw3d"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin/test.rs"


[dependencies]
winit = "0.17"
vulkano = "0.10"
vulkano-win = "0.10"
vulkano-shader-derive = "0.10"
image = "0.19"
cgmath = "0.16.1"
glm = "0.2.3"